[package]
name = "mithril"
version = "0.0.1"
authors = ["Bryan Yap <bryan.yap.mh@gmail.com>"]
description = "3D physics engine in Rust"
keywords = ["physics"]
readme = "README.md"
repository = "https://github.com/yggie/mithril"
license = "MIT"

[lib]
name = "mithril"
path = "src/lib.rs"

[dependencies]
rand = "*"
