[package]
name = "mach"
version = "0.0.1"
authors = ["Bryan Yap <bryan.yap.mh@gmail.com>"]
description = "3D physics engine in Rust"
keywords = ["physics"]
readme = "README.md"
repository = "https://github.com/yggie/mach"
license = "MIT"

[lib]
name = "mach"
path = "src/lib.rs"

[features]
high_precision = [ ]

[dev-dependencies]
rand = "*"
time = "*"
glium = "*"
regex = "*"
nalgebra = "*"
quickcheck = "*"

#
# [profile.dev]
# panic = "abort"
#
# [profile.release]
# panic = "abort"
